--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "watch": "npx nodemon src/server.js",
     "start": "node src/server.js",
-    "test-watch": "jest --watch"
+    "test-watch": "jest --watch",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pm2": "^5.2.2"
   },
   "devDependencies": {
     "jest": "^29.3.1",
