--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "watch": "npx nodemon src/server.js",
     "start": "node src/server.js",
     "test-watch": "jest --watch",
@@ -17,6 +17,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
